Exra lives.  Lots of stuff.

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 
 	<!-- Lib files -->
 	<script src="js/lib/class.js"></script>
-	
-	<script src="js/testing.js"></script>
+	<script src="js/lib/howler/howler.js"></script>
 
 	<!-- Before states -->
 	<script src="js/points.js"></script>
@@ -19,6 +18,7 @@
 	<script src="js/bullet.js"></script>
 	<script src="js/ship.js"></script>
 	<script src="js/vortex.js"></script>
+	<script src="js/drifter.js"></script>
 
 	<!-- States -->
 	<script src="js/state.js"></script>
@@ -33,9 +33,9 @@
 	<!-- Main file -->
 	<script src="js/main.js"></script>
 </head>
-<body>
+<body bgcolor="#080808">
 	<input type="text" id="namefield">
-	<div style="background-color:#fff;position:absolute;top:0;width:200px;height:50px;"></div>
+	<div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div>
 	
 	<script>
 		var game = new Game();
