--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 	<script src="js/ship.js"></script>
 	<script src="js/vortex.js"></script>
 	<script src="js/drifter.js"></script>
+	<script src="js/particles.js"></script>
 
 	<!-- States -->
 	<script src="js/state.js"></script>
