--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>Roundabout</title>
 
 	<!-- Stylesheets -->
@@ -35,12 +36,17 @@
 	<script src="js/main.js"></script>
 </head>
 <body bgcolor="#080808">
-	<input type="text" id="namefield">
-	<div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div>
+	<!-- <div id="gameContainer"> -->
+		<canvas class="canvas" id="gameCanvas"></canvas>
+	<!-- </div> -->
+
+	<!-- <input type="text" id="namefield">
+	<div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div> -->
 	
 	<script>
 		var game = new Game();
 		game.run();
 	</script>
+
 </body>
 </html>
