Fix highscore issues.  Fix bullet life pacing.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 		<canvas class="canvas" id="gameCanvas"></canvas>
 	<!-- </div> -->
 
-	<!-- <input type="text" id="namefield">
-	<div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div> -->
+	<input type="text" id="namefield">
+	<div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div>
 	
 	<script>
 		var game = new Game();
