Migrate howler to beta. Expand font char set.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
 
 	<!-- Lib files -->
 	<script src="js/lib/class.js"></script>
-	<script src="js/lib/howler/howler.js"></script>
+	<!-- <script src="js/lib/howler/howler.js"></script> -->
+	<script src="js/lib/howlerbeta/howler.min.js"></script>
 
 	<!-- Before states -->
 	<script src="js/points.js"></script>
