Migrating core framework

--- a/index.html
+++ b/index.html
@@ -13,8 +13,11 @@
 
 	<!-- Lib files -->
 	<script src="js/lib/class.js"></script>
-	<!-- <script src="js/lib/howler/howler.js"></script> -->
 	<script src="js/lib/howlerbeta/howler.min.js"></script>
+		<!-- Flynn framework -->
+		<script src="js/lib/flynn/flynnPoints.js"></script>	
+		<script src="js/lib/flynn/flynnCanvas.js"></script>	
+		<script src="js/lib/flynn/flynnInput.js"></script>
 
 	<!-- Before states -->
 	<script src="js/points.js"></script>
@@ -32,9 +35,6 @@
 	<script src="js/menuState.js"></script>
 	<script src="js/endState.js"></script>
 
-	<!-- Managers and listeners -->
-	<script src="js/canvas.js"></script>
-	<script src="js/input.js"></script>
 
 	<!-- Main file -->
 	<script src="js/main.js"></script>
