Migratiing framework to Flynn lib

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 		<script src="js/lib/flynn/flynnPoints.js"></script>	
 		<script src="js/lib/flynn/flynnCanvas.js"></script>	
 		<script src="js/lib/flynn/flynnInput.js"></script>
+		<script src="js/lib/flynn/flynnParticles.js"></script>
+		<script src="js/lib/flynn/flynnPolygon.js"></script>
+		<script src="js/lib/flynn/flynnState.js"></script>
 
 	<!-- Before states -->
 	<script src="js/points.js"></script>
-	<script src="js/polygon.js"></script>
 	<script src="js/bullet.js"></script>
 	<script src="js/ship.js"></script>
 	<script src="js/vortex.js"></script>
 	<script src="js/drifter.js"></script>
 	<script src="js/blocker.js"></script>
-	<script src="js/particles.js"></script>
 
 	<!-- States -->
-	<script src="js/state.js"></script>
 	<script src="js/gameState.js"></script>
 	<script src="js/menuState.js"></script>
 	<script src="js/endState.js"></script>
