--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 	<!-- Lib files -->
 	<script src="js/lib/class.js"></script>
 	<script src="js/lib/howlerbeta/howler.min.js"></script>
-		<!-- Flynn framework -->
+		<!-- Flynn vector game framework -->
 		<script src="js/lib/flynn/flynnPoints.js"></script>	
 		<script src="js/lib/flynn/flynnCanvas.js"></script>	
 		<script src="js/lib/flynn/flynnInput.js"></script>
 		<script src="js/lib/flynn/flynnParticles.js"></script>
 		<script src="js/lib/flynn/flynnPolygon.js"></script>
 		<script src="js/lib/flynn/flynnState.js"></script>
+		<script src="js/lib/flynn/flynnBullet.js"></script>
 
 	<!-- Before states -->
 	<script src="js/points.js"></script>
-	<script src="js/bullet.js"></script>
 	<script src="js/ship.js"></script>
 	<script src="js/vortex.js"></script>
 	<script src="js/drifter.js"></script>
