--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 	<!-- Stylesheets -->
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="apple-touch-icon" href="roundaboutIcon76x76.png">
 
 	<!-- Lib files -->
 	<script src="js/lib/class.js"></script>
