--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 		<script src="js/lib/flynn/flynnPolygon.js"></script>
 		<script src="js/lib/flynn/flynnState.js"></script>
 		<script src="js/lib/flynn/flynnBullet.js"></script>
+		<script src="js/lib/flynn/flynnMcp.js"></script>
 
 	<!-- Before states -->
 	<script src="js/points.js"></script>
