Add developer mode as URL option

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<script src="js/lib/class.js"></script>
 	<script src="js/lib/howlerbeta/howler.min.js"></script>
 		<!-- Flynn vector game framework -->
-		<script src="js/lib/flynn/flynnResources.js"></script>	
+        <script src="js/lib/flynn/flynnUtil.js"></script>
+		<script src="js/lib/flynn/flynnResources.js"></script>
 		<script src="js/lib/flynn/flynnCanvas.js"></script>	
 		<script src="js/lib/flynn/flynnInput.js"></script>
 		<script src="js/lib/flynn/flynnParticles.js"></script>
