--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
 		<script src="js/lib/flynn/flynnResources.js"></script>
 		<script src="js/lib/flynn/flynnCanvas.js"></script>	
 		<script src="js/lib/flynn/flynnInput.js"></script>
-		<script src="js/lib/flynn/flynnParticles.js"></script>
 		<script src="js/lib/flynn/flynnPolygon.js"></script>
 		<script src="js/lib/flynn/flynnState.js"></script>
 		<script src="js/lib/flynn/flynnBullet.js"></script>
@@ -32,6 +31,7 @@
 	<script src="js/vortex.js"></script>
 	<script src="js/drifter.js"></script>
 	<script src="js/blocker.js"></script>
+    <script src="js/particles.js"></script>
 
 	<!-- States -->
 	<script src="js/gameState.js"></script>
