--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<script src="js/lib/howlerbeta/howler.min.js"></script>
 		<!-- Flynn vector game framework -->
         <script src="js/lib/flynn/flynnUtil.js"></script>
+        <script src="js/lib/flynn/flynnTimers.js"></script>
 		<script src="js/lib/flynn/flynnResources.js"></script>
 		<script src="js/lib/flynn/flynnCanvas.js"></script>	
 		<script src="js/lib/flynn/flynnInput.js"></script>
