--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<!-- Lib files -->
 	<script src="js/lib/class.js"></script>
 	<script src="js/lib/howlerbeta/howler.min.js"></script>
+	<script src="js/lib/victor/victor.js"></script>
 		<!-- Flynn vector game framework -->
         <script src="js/lib/flynn/flynnUtil.js"></script>
         <script src="js/lib/flynn/flynnTimers.js"></script>
@@ -23,7 +24,7 @@
 		<script src="js/lib/flynn/flynnInput.js"></script>
 		<script src="js/lib/flynn/flynnPolygon.js"></script>
 		<script src="js/lib/flynn/flynnState.js"></script>
-		<script src="js/lib/flynn/flynnBullet.js"></script>
+		<script src="js/lib/flynn/flynnProjectiles.js"></script>
 		<script src="js/lib/flynn/flynnMcp.js"></script>
 
 	<!-- Before states -->
@@ -35,9 +36,10 @@
     <script src="js/particles.js"></script>
 
 	<!-- States -->
-	<script src="js/gameState.js"></script>
-	<script src="js/menuState.js"></script>
-	<script src="js/endState.js"></script>
+	<script src="js/stateGame.js"></script>
+	<script src="js/stateMenu.js"></script>
+	<script src="js/stateEnd.js"></script>
+	<script src="js/stateConfig.js"></script>
 
 
 	<!-- Main file -->
