--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 		<script src="js/lib/flynn/flynnInput.js"></script>
 		<script src="js/lib/flynn/flynnPolygon.js"></script>
 		<script src="js/lib/flynn/flynnState.js"></script>
+		<script src="js/lib/flynn/flynnStateConfig.js"></script>
 		<script src="js/lib/flynn/flynnProjectiles.js"></script>
+		<script src="js/lib/flynn/flynnOptionManager.js"></script>
 		<script src="js/lib/flynn/flynnMcp.js"></script>
 
 	<!-- Before states -->
@@ -39,7 +41,6 @@
 	<script src="js/stateGame.js"></script>
 	<script src="js/stateMenu.js"></script>
 	<script src="js/stateEnd.js"></script>
-	<script src="js/stateConfig.js"></script>
 
 
 	<!-- Main file -->
