flynn refactor wip

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 	<script src="js/lib/victor/victor.js"></script>
 	<script src="js/lib/cookies/cookies.js"></script>
 		<!-- Flynn vector game framework -->
+		<script src="js/lib/flynn/flynnMain.js"></script>
         <script src="js/lib/flynn/flynnUtil.js"></script>
         <script src="js/lib/flynn/flynnTimers.js"></script>
-		<script src="js/lib/flynn/flynnResources.js"></script>
 		<script src="js/lib/flynn/flynnCanvas.js"></script>	
 		<script src="js/lib/flynn/flynnInput.js"></script>
 		<script src="js/lib/flynn/flynnPolygon.js"></script>
