--- a/index.html
+++ b/index.html
@@ -1,66 +1,58 @@
 <!doctype html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<!-- <meta name="apple-mobile-web-app-capable" content="yes" /> -->
-	<!-- <meta name="apple-mobile-web-app-status-bar-style" content="black" /> -->
-	<!-- <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/> -->
-	<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
-	<title>Roundabout</title>
+    <meta charset="UTF-8">
+    <title>Roundabout</title>
 
-	<!-- Stylesheets -->
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="apple-touch-icon" href="roundaboutIcon76x76.png">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="apple-touch-icon" href="roundaboutIcon76x76.png">
 
-	<!-- Lib files -->
-	<script src="js/lib/class.js"></script>
-	<script src="js/lib/howlerbeta/howler.min.js"></script>
-	<script src="js/lib/victor/victor.js"></script>
-	<script src="js/lib/cookies/cookies.js"></script>
-		<!-- Flynn vector game framework -->
-		<script src="js/lib/flynn/flynnMain.js"></script>
-        <script src="js/lib/flynn/flynnUtil.js"></script>
-        <script src="js/lib/flynn/flynnTimers.js"></script>
-		<script src="js/lib/flynn/flynnCanvas.js"></script>	
-		<script src="js/lib/flynn/flynnInput.js"></script>
-		<script src="js/lib/flynn/flynnPolygon.js"></script>
-		<script src="js/lib/flynn/flynnState.js"></script>
-		<script src="js/lib/flynn/flynnStateEnd.js"></script>
-		<script src="js/lib/flynn/flynnStateConfig.js"></script>
-		<script src="js/lib/flynn/flynnProjectiles.js"></script>
-		<script src="js/lib/flynn/flynnOptionManager.js"></script>
-		<script src="js/lib/flynn/flynnMcp.js"></script>
-		<script src="js/lib/flynn/flynnLeaderboard.js"></script>
+    <!-- Libraries -->
+    <script src="js/lib/class.js"></script>
+    <script src="js/lib/howlerbeta/howler.min.js"></script>
+    <script src="js/lib/victor/victor.js"></script>
+    <script src="js/lib/cookies/cookies.js"></script>
+    
+    <!-- Flynn vector game framework -->
+    <script src="js/lib/flynn/flynnMain.js"></script>
+    <script src="js/lib/flynn/flynnUtil.js"></script>
+    <script src="js/lib/flynn/flynnTimers.js"></script>
+    <script src="js/lib/flynn/flynnCanvas.js"></script> 
+    <script src="js/lib/flynn/flynnInput.js"></script>
+    <script src="js/lib/flynn/flynnPolygon.js"></script>
+    <script src="js/lib/flynn/flynnState.js"></script>
+    <script src="js/lib/flynn/flynnStateEnd.js"></script>
+    <script src="js/lib/flynn/flynnStateConfig.js"></script>
+    <script src="js/lib/flynn/flynnProjectiles.js"></script>
+    <script src="js/lib/flynn/flynnOptionManager.js"></script>
+    <script src="js/lib/flynn/flynnMcp.js"></script>
+    <script src="js/lib/flynn/flynnLeaderboard.js"></script>
 
-	<!-- Before states -->
-	<script src="js/points.js"></script>
-	<script src="js/ship.js"></script>
-	<script src="js/vortex.js"></script>
-	<script src="js/drifter.js"></script>
-	<script src="js/blocker.js"></script>
+    <!-- Before states -->
+    <script src="js/points.js"></script>
+    <script src="js/ship.js"></script>
+    <script src="js/vortex.js"></script>
+    <script src="js/drifter.js"></script>
+    <script src="js/blocker.js"></script>
     <script src="js/particles.js"></script>
 
-	<!-- States -->
-	<script src="js/stateGame.js"></script>
-	<script src="js/stateMenu.js"></script>
-	<!-- <script src="js/stateEnd.js"></script> -->
+    <!-- States -->
+    <script src="js/stateGame.js"></script>
+    <script src="js/stateMenu.js"></script>
 
-
-	<!-- Main file -->
-	<script src="js/main.js"></script>
+    <!-- Main file -->
+    <script src="js/main.js"></script>
 </head>
 <body bgcolor="#080808">
-	<!-- <div id="gameContainer"> -->
-		<canvas class="canvas" id="gameCanvas"></canvas>
-	<!-- </div> -->
+    <canvas class="canvas" id="gameCanvas"></canvas>
 
-	<input type="text" id="namefield">
-	<div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div>
-	
-	<script>
-		var game = new Game();
-		game.run();
-	</script>
+    <input type="text" id="namefield">
+    <div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div>
+    
+    <script>
+        var main = new Game.Main();  // entry point in main.js
+        main.run();
+    </script>
 
 </body>
 </html>
