--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="js/lib/flynn/flynnOptionManager.js"></script>
     <script src="js/lib/flynn/flynnMcp.js"></script>
     <script src="js/lib/flynn/flynnLeaderboard.js"></script>
+    <script src="js/lib/flynn/flynnVaLogo.js"></script>
 
     <!-- Before states -->
     <script src="js/points.js"></script>
@@ -46,9 +47,10 @@
 <body bgcolor="#080808">
     <canvas class="canvas" id="gameCanvas"></canvas>
 
-    <input type="text" id="namefield">
-    <div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div>
-    
+    <input type="text" id="namefield"></input>
+        <div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div>
+    </input>
+
     <script>
         Game.main = new Game.Main();  // entry point in main.js
         Game.main.run();
