--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body bgcolor="#080808">
     <canvas class="canvas" id="gameCanvas"></canvas>
 
-    <input type="text" id="namefield"></input>
+    <input type="password" id="namefield"></input>
         <div style="background-color:#080808;position:absolute;top:0;width:200px;height:50px;"></div>
     </input>
 
