Migrate to howler v2.0.2, minimized Flynn

--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
     <!-- Libraries -->
     <script src="js/lib/class.js"></script>
-    <script src="js/lib/howlerbeta/howler.min.js"></script>
+    <script src="js/lib/howler/howler.core.min.js"></script>
     <script src="js/lib/victor/victor.js"></script>
     <script src="js/lib/cookies/cookies.js"></script>
     
-    <!-- Flynn vector game framework -->
-    <script src="js/lib/flynn/flynnMain.js"></script>
+    <!-- Flynn vector game framework (source) -->
+<!--     <script src="js/lib/flynn/flynnMain.js"></script>
     <script src="js/lib/flynn/flynnUtil.js"></script>
     <script src="js/lib/flynn/flynnTimers.js"></script>
     <script src="js/lib/flynn/flynnCanvas.js"></script> 
@@ -27,7 +27,10 @@
     <script src="js/lib/flynn/flynnOptionManager.js"></script>
     <script src="js/lib/flynn/flynnMcp.js"></script>
     <script src="js/lib/flynn/flynnLeaderboard.js"></script>
-    <script src="js/lib/flynn/flynnVaLogo.js"></script>
+    <script src="js/lib/flynn/flynnVaLogo.js"></script> -->
+
+    <!-- Flynn vector game framework (minimized) -->
+    <script src="js/lib/flynn/flynn.core.min.js"></script>
 
     <!-- Before states -->
     <script src="js/points.js"></script>
