--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <script src="js/lib/flynn/flynnOptionManager.js"></script>
     <script src="js/lib/flynn/flynnMcp.js"></script>
     <script src="js/lib/flynn/flynnLeaderboard.js"></script>
-    <script src="js/lib/flynn/flynnVaLogo.js"></script> -->
+    <script src="js/lib/flynn/flynnVaLogo.js"></script>
+    <script src="js/lib/flynn/flynnVictor.js"></script> -->
 
     <!-- Flynn vector game framework (minimized) -->
     <script src="js/lib/flynn/flynn.core.min.js"></script>
