--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!-- Libraries -->
     <script src="js/lib/class.js"></script>
+    <script src="js/lib/pixijs/pixi.js"></script>
     <script src="js/lib/howler/howler.core.min.js"></script>
     <script src="js/lib/victor/victor.js"></script>
     <script src="js/lib/cookies/cookies.js"></script>
@@ -28,6 +29,7 @@
     <script src="js/lib/flynn/flynnMcp.js"></script>
     <script src="js/lib/flynn/flynnLeaderboard.js"></script>
     <script src="js/lib/flynn/flynnVaLogo.js"></script>
+    <script src="js/lib/flynn/flynnGauge.js"></script>
     <script src="js/lib/flynn/flynnVictor.js"></script> -->
 
     <!-- Flynn vector game framework (minimized) -->
